fixed styles on mobile

--- a/styles.css
+++ b/styles.css
@@ -99,10 +99,7 @@ body {
     .drop-menu {
         margin-top: 1%;
     }
-
 }
-
-
 
 .navbar-listbox {
     list-style: none;
@@ -224,7 +221,6 @@ body {
     border-radius: 12px;
     background-color: rgb(145, 235, 235);
     border: 2px solid #722eca;
-    
     transition-duration: 0.4s;
 
 }
@@ -233,4 +229,31 @@ body {
     background-color: #6c0594;
     color: rgb(65, 233, 233);
     border: 2px solid rgb(65, 233, 233);
+}
+
+@media (max-width: 600px) {
+    
+    .box-filler {
+        width: 5em;
+        height: 5em;
+        border-radius: 6%;
+        box-shadow: 0 0 30px #c1a8e2;
+        display: flex;
+        align-content: center;
+    }
+
+    .box-filler p {
+        display: none;
+    }
+
+    #pc-art {
+        display: none;
+    }
+
+    #game-link {
+        align-self: center;
+        margin:auto;
+        height: 100%;
+
+    }
 }
